feat(user): update user info implemented and documented
