# src/routes/userRoutes.ts
@@ -1,10 +1,13 @@
 import { Router } from 'express';
 import userController from '../controllers/userController';
 import 'express-async-errors';
-import addUserValidation from '../middlewares/user.validations';
+import userValidation from '../middlewares/user.validations';
+import validateToken from '../middlewares/auth.middleware';
 
 const userRouter = Router();
 
-userRouter.post('/', addUserValidation, userController.createUser);
+userRouter.post('/', userValidation.addUser, userController.createUser);
+userRouter.patch('/pass', validateToken, userValidation.updatePass, userController.changePassword);
+userRouter.patch('/', validateToken, userValidation.updateUser, userController.updateUser);
 
 export default userRouter;
